# FastApi-boilerplate-poetry

./: .gitignore  Dockerfile  README.md  gunicorn_conf.py  logging.conf  pyproject.toml  requirements.txt  start.sh
app/: main.py
app/controllers/: health_controller.py  protected_controller.py  schemas.py
app/crud/: user_crud.py
app/data/: models.py
app/utils/: dependency.py  helpers.py
core/: dbsetup.py  extensions.py  factories.py
migrations/versions/: e7e848a26271_.py
settings/: devsettings.py  prodsettings.py  settings.py
